# kazugold

./: CONTRIBUTING.md  INSTALL  Makefile.am  README.md  configure.ac  libkazugoldconsensus.pc  libkazugoldconsensus.pc.in  replace.sh
.tx/: config
build-aux/m4/: kazugold_find_bdb48.m4  kazugold_qt.m4  kazugold_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  kazugold-cli.bash-completion  kazugold-qt.pro  kazugold-tx.bash-completion  kazugoldd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  kazugold-qt.desktop  kazugold-qt.install  kazugold-qt.lintian-overrides  kazugold-qt.protocol  kazugold-tx.bash-completion  kazugold-tx.install  kazugoldd.bash-completion  kazugoldd.examples  kazugoldd.install  kazugoldd.lintian-overrides  kazugoldd.manpages  rules  watch
contrib/devtools/: README.md  symbol-check.py  (+2 more)
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  npips.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: KazuGold-4.0.files  KazuGold4-Qt.files  KazuGold4.files  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  (+57 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: kazugold-config.h  kazugold-config.h.in
src/consensus/: cfund.cpp  cfund.h  consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: KazuGold4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  getaddresstoreceive.cpp  getaddresstoreceive.ui  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  kazugold.cpp  kazugold.qrc  kazugold_locale.qrc  kazugoldaddressvalidator.cpp  kazugoldaddressvalidator.h  kazugoldamountfield.cpp  kazugoldamountfield.h  kazugoldgui.cpp  kazugoldgui.h  kazugoldstrings.cpp  kazugoldunits.cpp  kazugoldunits.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  navtechinit.cpp  navtechinit.h  navtechinit.ui  (+60 more)
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: kazugold_af.ts  kazugold_af_ZA.ts  kazugold_ar.ts  kazugold_be_BY.ts  kazugold_bg.ts  kazugold_bg_BG.ts  kazugold_ca.ts  kazugold_ca@valencia.ts  kazugold_ca_ES.ts  kazugold_cs.ts  kazugold_cs_CZ.ts  kazugold_cy.ts  kazugold_da.ts  kazugold_de.ts  kazugold_el.ts  kazugold_el_GR.ts  kazugold_en.ts  kazugold_en_GB.ts  kazugold_eo.ts  kazugold_es.ts  kazugold_es_AR.ts  kazugold_es_CL.ts  kazugold_es_CO.ts  kazugold_es_DO.ts  kazugold_es_ES.ts  kazugold_es_MX.ts  kazugold_es_UY.ts  kazugold_es_VE.ts  kazugold_et.ts  kazugold_eu_ES.ts  kazugold_fa.ts  kazugold_fa_IR.ts  kazugold_fi.ts  kazugold_fr.ts  kazugold_fr_CA.ts  kazugold_fr_FR.ts  kazugold_gl.ts  kazugold_he.ts  kazugold_hi_IN.ts  kazugold_hr.ts  (+45 more)
src/qt/res/: kazugold-qt-res.rc
src/qt/res/icons/: kazugold.icns
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.h  ismine.h  kazugoldconsensus.cpp  kazugoldconsensus.h  script.h  script_error.h  sigcache.h  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  kazugold-util-test.py  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+17 more)
src/test/data/: README.md  kazugold-util-test.json
src/univalue/lib/: univalue_escapes.h
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  navtech.cpp  navtech.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+148 files in other folders)
